plugins {
	id 'java'
	id 'org.springframework.boot' version '3.1.2'
	id 'io.spring.dependency-management' version '1.1.2'
}

group = 'real'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.1.2'
	implementation 'org.springframework.boot:spring-boot-starter-security:3.1.2'
	implementation 'org.springframework.boot:spring-boot-starter-validation:3.1.2'
	implementation 'org.springframework.boot:spring-boot-starter-web:3.1.2'
	implementation 'org.springframework.boot:spring-boot-starter-actuator:3.1.2'
	implementation 'org.hibernate.orm:hibernate-core:6.3.1.Final'

	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client:3.1.4'

	// Querydsl
	implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
	annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
	annotationProcessor "jakarta.annotation:jakarta.annotation-api:2.1.1"
	annotationProcessor "jakarta.persistence:jakarta.persistence-api:3.1.0"

	compileOnly 'org.projectlombok:lombok:1.18.28'
	annotationProcessor 'org.projectlombok:lombok:1.18.28'

	// Test Dependencies
	testCompileOnly 'org.projectlombok:lombok:1.18.28'
	testAnnotationProcessor 'org.projectlombok:lombok:1.18.28'

	testImplementation 'org.springframework.boot:spring-boot-starter-test:3.1.2'
	testImplementation 'org.springframework.security:spring-security-test:6.1.2'
	testImplementation 'io.rest-assured:rest-assured:5.3.1'
	testImplementation 'com.h2database:h2:2.2.220'
}

test {
	useJUnitPlatform()
}